--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting to the home folder</title>
-<meta http-equiv="refresh" content="0; URL='http://www.cityschema.org/home/index.htm'">
+<meta http-equiv="refresh" content="0; URL='home/index.htm'">
 <link rel="canonical" href="http://www.cityschema.org/home/index.htm">
 
