--- a/index.htm
+++ b/index.htm
@@ -2,5 +2,5 @@
 <meta charset="utf-8">
 <title>Redirecting to the home folder</title>
 <meta http-equiv="refresh" content="0; URL='home/index.htm'">
-<link rel="canonical" href="http://www.cityschema.org/home/index.htm">
+<link rel="canonical" href="./home/index.htm">
 
