new file:   repocat_intro/images/tall.jpg 	new file:   repocat_intro/images/wide.jpg 	new file:   repocat_intro/index.htm

--- a/home/index.htm
+++ b/home/index.htm
@@ -37,19 +37,25 @@
     <h3>Why?  Expensive observations and effort are going to waste.</h3>
     <p>We know that in the Boston area there are several municipal governments, campus administrations and architecture firms that maintain broad-scale 3D models for their territorial interests and surrounding area. These models are used primarily for visualizing proposed changes. Many of these models overlap with each-other resulting in redundancy of details and of effort.  Opportunities to systematically remember the past form of the city is fragmented and impractical to collect -- even though millions of dollars are spent annually by different agencies to collect systematic snapshots of the city. 
     </p><p>
-    Everyone agrees that ongoing information stewardship is a good idea, but this does not seem to be a pattern that emerges spontaneously!
+    Everyone agrees that ongoing collaboration in information stewardship is a good idea, but this does not seem to be a pattern that emerges spontaneously!   We do not see region-wide collaboration in the development and stewardship of city models because figuring out how to organize the work is very time-consuming. Individual participants don't have the motivation or skills think through the needs of collaborators from different disciplines with tools and workflows that pose real difficulties for information exchange. 
+    </p><p>
+      This project, sponsored in part by the <b>City of Boston Planning and Development Agency Office of Digital Cartography and GIS </b>  is designed to diminish these obstacles by working with contributors from the spectrum of disciplines to create a ready-made framework that is designed to preserve information about the shape of places in the city through all of the hand-offs that are required.
     </p>
-    
+    </p>
+    <h3>Streetscapes are part of our Shared Cultural Heritage</h3> 
+    <p>The world-wide web has broought about many new possibilities to access and connect information resources about people, places, things and ideas. Georeferencing is a powerful way of connecting resources that relate to places.  <a href="https://www.historypin.org/" target="outboard">HistoryPIN</a>, <a href="https://www.digitalcommonwealth.org/map" target="outboard">Digital Commonwealth</a> and <a href="https://atlascope.leventhalmap.org/" target="outboard">AtlasScope</a> are three examples of cultural preservation projects that use georeferencing to connect historical documents.  These are part of a greater movement known as Digital Humanities, in that is bringing about new ways of discovering,connecting and presenting ideas.  
+    </p>
+    <p>3D models of terrain and buildings are not much different from georeferenced photographs, drawings and maps.  It is only a matter of time before tools like the ones referenced above make use of 3D models as part of our cultural memory -- as observations that can be remembered and also as 3D base maps for contextualizing and connecting old photographs and other resources.  It is phenomenal how much new information emerges when observations from different points of vire and points in time are connected together.
+    </p>
+
+
     <figure class="middle"> 
     <img class="scaled" src="images/ecosystem.jpg"> 
     <figcaption>Model asset lifecycle involves GIS, 3D Model Authoring and Archival data structures.</figcaption>
     </figure>
 
     
-    <p>   We do not see region-wide collaboration in the development and stewardship of city models because figuring out how to organize the work is very time-consuming. Individual participants don't have the motivation or skills think through the needs of collaborators from different disciplines with tools and workflows that pose real difficulties for information exchange. 
-    </p><p>
-      This project, funded by the <b>City of Boston Planning and Development Agency Office of Digital Cartography and GIS </b>  is designed to diminish these obstacles by working with contributors from the spectrum of disciplines to create a ready-made framework that is designed to preserve information about the shape of places in the city through all of the hand-offs that are required.
-    </p>
+   
     <h2>What? Schema for Annotating, Preserving and Sharing Detailed City model Assets</h2>
     <p>This project takes an archival asset-management approach organizing city models. In this sense, 3D models of building shells or terrain tiles are digital documents reflecting observations and ideas, very similar to scanned photographs and drawings -- just a different format with a different previewer plug-in. When these 3D models become sytematically referenced and retrievable, they can be very useful for generating a 3D context for understanding the interrelationships connecting other documents. 
     </p><p>
