--- a/repocat_intro/index.htm
+++ b/repocat_intro/index.htm
@@ -35,39 +35,14 @@
 <!-- Page content goes inside the article div -->
 <div id="article">
   <h3 class="section_title">Repository Catalog</h3>  <!-- Optional: would be the tile of the intro chapter.  -->
-  <h1 class="title">Introducing the Repository Catalog Template</h1>
-    <p>Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya 
-      <h3 id="early">Early</h3>
-      <figure class="right">
-        <img class="scaled" src="images/tall.jpg">
-        <figcaption>Fig Right</figcaption>
-      </figure>
-      <p><a href="#late">Scroll to Late</a>  doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya <p>doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya <p>doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya 
-      </p>
-      <figure class="middle"> 
-        <img class="triptic" src="images/tall.jpg"> 
-        <img class="triptic" src="images/tall.jpg"> 
-        <img class="triptic" src="images/tall.jpg"> 
-        <figcaption>Triptic</figcaption>
-      </figure>
-      <p>Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya <p>doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya <p>doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya 
-      </p>
-      <figure class="middle"> 
-        <img class="scaled" src="images/wide.jpg"> 
-        <figcaption> Fig Middle</figcaption>
-      </figure>
-        <h3 class="heading" id="late">doing? </h3>
-        <p>Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya <a href="#early">Scroll to Early</a> 
+  <h1 class="title">Introducing the Repository Catalog</h1>
+    <p>citySchema.org is a platform for sharing tools and templates for sharing a city-wide 3D model components among diverse tools including geographic information systems (GIS) and 3d modeling programs and tools for archival access and preservation.  The citySchema Repository Catalog is a means of publishing a city model as a single package that includes all of the model components along withthe catalog information, feature level metadata and finding aids in a single data-set thatmay be accessed with a variety of tools. 
     </p>
-
-    <table class="dictionary">
-      <tr><th>Heading 1</th><th>Heading 2</th></tr>
-      <tr><td>Row 1</td><td>Col 2</td></tr>
-      <tr><td>Row 1</td><td>Col 2</td></tr>
-    </table>
-
-    <p>Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya <p>doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya <p>doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? 
+    <p>The design of the Repository Catalog is guided by the <a href="http://www.oais.info/" target="outboard"> International Standards Organization Reference Model for Open Archival Information Systems (OAIS)</a>.  OAIS is a convention for guiding information exchange activities so that the products are accessible preservable over the long-term. 
     </p>
+    <p>The Repository / Catalog is designed to be easy to create and to use with very simple tools.  You can taka a tour of <a href="https://cityschema.github.io/bos3d-repository-catalog/catalog/index.htm" target="downloads">this full working demo created for the Boston Planning and Development agency</a>.   Or you can <a href="https://github.com/CitySchema/bos3d-repository-catalog" target="github">explore the same catalog as a simple file-system, which may be cloned from GitHub</a>. The documentaion on the github repository has instructions for taking a self-guided tour.  In the coming days, this page will be expanded to provide more information on how your project can make use of the citySchema Repository Catalog to organize, share and preserve your city model assets.
+    <p>
+    
 </div> <!-- Closes #article div -->
 
     <div id="footer"> <!-- Content provided by cityschema_includes.js--> </div> 
