modified:   repocat_intro/index.htm

--- a/repocat_intro/index.htm
+++ b/repocat_intro/index.htm
@@ -42,6 +42,7 @@
     </p>
     <p>The Repository / Catalog is designed to be easy to create and to use with very simple tools.  You can taka a tour of <a href="https://cityschema.github.io/repository-catalog/catalog/index.htm" target="downloads">this full working demo created for the Boston Planning and Development agency</a>.   Or you can <a href="https://github.com/CitySchema/repository-catalog" target="github">explore the same catalog as a simple file-system, which may be cloned from GitHub</a>. The documentaion on the github repository has instructions for taking a self-guided tour.  In the coming days, this page will be expanded to provide more information on how your project can make use of the citySchema Repository Catalog to organize, share and preserve your city model assets.
     <p>
+    Thanks to the Boston Planning and Development Agency for sponsoring this project and for the use of their template for this demonstration!
     
 </div> <!-- Closes #article div -->
 
