--- a/repocat_intro/index.htm
+++ b/repocat_intro/index.htm
@@ -36,11 +36,21 @@
 <div id="article">
   <h3 class="section_title">Repository Catalog</h3>  <!-- Optional: would be the tile of the intro chapter.  -->
   <h1 class="title">Introducing the Repository Catalog</h1>
-    <p>citySchema.org is a platform for sharing tools and templates for sharing a city-wide 3D model components among diverse tools including geographic information systems (GIS) and 3d modeling programs and tools for archival access and preservation.  The citySchema Repository Catalog is a means of publishing a city model as a single package that includes all of the model components along withthe catalog information, feature level metadata and finding aids in a single data-set thatmay be accessed with a variety of tools. 
+    <p>citySchema.org is a platform for sharing tools and templates for sharing a city-wide 3D model components among diverse tools including geographic information systems (GIS) and 3d modeling programs and tools for archival access and preservation.  The citySchema Repository Catalog is a means of publishing a city model as a single package that includes all of the model components along with the catalog information, feature level metadata and finding aids in a single data-set that may be accessed with a variety of tools. 
     </p>
-    <p>The design of the Repository Catalog is guided by the <a href="http://www.oais.info/" target="outboard"> International Standards Organization Reference Model for Open Archival Information Systems (OAIS)</a>.  OAIS is a convention for guiding information exchange activities so that the products are accessible preservable over the long-term. 
+    <p>The design of the Repository Catalog is guided by the <a href="http://www.oais.info/" target="outboard"> International Standards Organization Reference Model for Open Archival Information Systems (OAIS)</a>.  OAIS is a convention for guiding information exchange activities so that the products are accessible and preservable over the long-term. 
     </p>
-    <p>The Repository / Catalog is designed to be easy to create and to use with very simple tools.  You can taka a tour of <a href="https://cityschema.github.io/repository-catalog/catalog/index.htm" target="downloads">this full working demo created for the Boston Planning and Development agency</a>.   Or you can <a href="https://github.com/CitySchema/repository-catalog" target="github">explore the same catalog as a simple file-system, which may be cloned from GitHub</a>. The documentaion on the github repository has instructions for taking a self-guided tour.  In the coming days, this page will be expanded to provide more information on how your project can make use of the citySchema Repository Catalog to organize, share and preserve your city model assets.
+    <p>The Repository / Catalog is designed make it easy for users to access city model assets.  The catalog repository can be easily be modified as a repository for city models covering other areas.  
+    </p>
+   <ul>
+     <li> Take a tour of <a href="https://cityschema.github.io/repository-catalog/catalog/index.htm" target="downloads">this full working demo created for the Boston Planning and Development agency</a>. 
+      <li>Jump to the <a href="https://cityschema.github.io/repository-catalog/catalog/doc_index.htm" target="downloads">Documentation Index</a> which explains a lot of the concepts about how we organize city models.
+      <li>Or you can <a href="https://github.com/CitySchema/repository-catalog" target="github">explore the same catalog as a simple file-system, which may be cloned from GitHub</a>. 
+    </ul>
+      <p>
+      The documentation on the github repository has instructions for taking a self-guided tour that explains how the Reopsitory/Catalog can be modified using simple html and javascript skills to package publish your own city model.
+      </p><p>  
+      In the coming days, this page will be expanded to provide more information on how your project can make use of the citySchema Repository Catalog to organize, share and preserve your city model assets.
     <p>
     Thanks to the Boston Planning and Development Agency for sponsoring this project and for the use of their template for this demonstration!
     
