modified:   home/index.htm 	bldg_model_mgt/ 	model_collection/

--- a/home/index.htm
+++ b/home/index.htm
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <!-- Hi Folks, this is the template file for pages in the citySchema.org documentation library -->
@@ -39,7 +38,7 @@
     </p>
     <figure class="middle"> 
       <img class="scaled" src="images/zakim.jpg"> 
-      <figcaption>Model asset lifecycle involves GIS, 3D Model Authoring and Archival data structures.</figcaption>
+      <figcaption>A scene from the Boston city model.</figcaption>
       </figure>
     <p>
     Everyone agrees that ongoing collaboration in information stewardship is a good idea, but this does not seem to be a pattern that emerges spontaneously!   We do not see region-wide collaboration in the development and stewardship of city models because figuring out how to organize the work is very time-consuming. Individual participants don't have the motivation or skills think through the needs of collaborators from different disciplines with tools and workflows that pose real difficulties for information exchange. 
@@ -52,15 +51,10 @@
     </p>
     <figure class="middle"> 
       <img class="scaled" src="images/model_history.jpg"> 
-      <figcaption>Model asset lifecycle involves GIS, 3D Model Authoring and Archival data structures.</figcaption>
+      <figcaption>3D building models are historical documents.</figcaption>
       </figure>
     <p>3D models of terrain and buildings are not much different from georeferenced photographs, drawings and maps.  It is only a matter of time before tools like the ones referenced above make use of 3D models as part of our cultural memory -- as observations that can be remembered and also as 3D base maps for contextualizing and connecting old photographs and other resources.  It is phenomenal how much new information emerges when observations from different points of vire and points in time are connected together.
     </p>
-
-
-
-
-    
    
     <h2>What? Schema for Annotating, Preserving and Sharing Detailed City model Assets</h2>
     <p>This project takes an archival asset-management approach organizing city models. In this sense, 3D models of building shells or terrain tiles are digital documents reflecting observations and ideas, very similar to scanned photographs and drawings -- just a different format with a different previewer plug-in. When these 3D models become sytematically referenced and retrievable, they can be very useful for generating a 3D context for understanding the interrelationships connecting other documents. 
