--- a/tile_grid/index.htm
+++ b/tile_grid/index.htm
@@ -3,8 +3,8 @@
 <html lang="en">
 <!-- Hi Folks, this is the template file for pages in the citySchema.org documentation library -->
 <head> <!-- Edit the following for each page -->
-    <title>Template</title>
-    <meta name="description" content="Home page for the citySchema project.  A gateway for tools, techniques and documentation avout cross-siciplinary collaboration on city models. ">
+    <title>Tile Grid and Coordinate System</title>
+    <meta name="description" content="Describes the tile grid and coordinate system for Boston-area city model assets shaerd according to the the citySchema.org Repository / Catalog ">
     <meta name="keywords" content="City Modeling, Digital Humanities, Geography">
     <meta name="author" content="Paul B. Cote">
     
