--- a/model_collection/index.htm
+++ b/model_collection/index.htm
@@ -41,16 +41,6 @@
 <p> 
     This document explains the basic concepts and purposes of the collection and catalog for users who wish to use or contribute to the model collection.  
 
-    <h3>Quick Links</h3>
-      <ul>
-        <li><a href="#overview">Conceptual Overview</a>
-        <li><a href="#interop">Interoperability Strategy</a>
-        <li><a href="#gdb">Geodatabase Format Collection and Catalog</a>
-        <li><a href="#obj">Open Source Format Collection and Catalog</a>
-        <li><a href="#datadictionary">Data Dictionary for Model Catalog</a> 
-        <li><a href="#status">Model Status Dictionary</a>
-        <li><a href="#LOD">Levels of Detail and other Recommendations for Model Structure</a>
-    </ul>
 
 <h2 id="overview">A Collection of 3D Models</h2>
 <p>
@@ -66,12 +56,7 @@
     <p>
 The real-world structures represented by models in the collection may exist or may be historical, proposed or completely hypothetical. It is possible to have more than one model for a given structure as observed at different times, created by different modelers at different levels of detail, as shown above.  We won't fight the temptation to call these "Building Models"; But users and contributors should keep in mind that models in this collection do not have a one-to-one relationship with actual "buildings" (though some of them do!).
 </p>
-<!--
-<div class="fig_right">
-    <p><img src="./images/kioskx4.jpg" width = "350px">
-    <p> From a historian's perspective, 3D models are records of historical observations.  3D scenes, like base maps, can be used to explore the relationships among independent documents.</p>
-    </div>
--->
+
 <h2 id="interop"> A Platform for Multidisciplinary Research and Collaboration</h2>
 <p>
     A 3D city model is useful for many types of research.  Within the BPDA applications are focused on urban planning and design review.  In the design and development community, city models are used to understand development alternatives.  People interested in the history of places can use the model as a resource and repository for obtaining and sharing observations of structures -- including ones that no longer exist or proposals that were never built.  Archivists and librarians will be interested in preserving 3D models of buildings just as they currently preserve collections of antique photographs, drawings and maps.    The 3D city model, like an old map, can be used to place independent documents in context to discover new information about the relationships among independent documents.
@@ -113,14 +98,14 @@ The real-world structures represented by models in the collection may exist or m
 
 <h2 id="obj">Open Format View of the Model Collection and Catalog</h2> 
 <h3>Wavefront Object Format</h3>
-<p>Long-term archiving and open-source applications (like most web visualization tools) require that 3D models and their attributes be exchanged using open formats.  Most commonly, the <a href="https://www.loc.gov/preservation/digital/formats/fdd/fdd000507.shtml">Wavefront Object format (.OBJ)</a>.  In .obj format, models are files that may be accompanied by a set of shading instructions and potentially folder of image textures.  Our open-format model collection the files related to a building model are packaged in a zip archive that is named with the unique <b>Model_ID</b> that refers to the catalog record for that model. <a href="./tiled_terrain.htm">Tiled terrain models</a> are also shared in OBJ format with ground-plan textures. 
+<p>Long-term archiving and open-source applications (like most web visualization tools) require that 3D models and their attributes be exchanged using open formats.  Most commonly, the <a href="https://www.loc.gov/preservation/digital/formats/fdd/fdd000507.shtml">Wavefront Object format (.OBJ)</a>.  In .obj format, models are files that may be accompanied by a set of shading instructions and potentially folder of image textures.  Our open-format model collection the files related to a building model are packaged in a zip archive that is named with the unique <b>Model_ID</b> that refers to the catalog record for that model. <a href="https://cityschema.github.io/repository-catalog/catalog/tiled_terrain.htm">Tiled terrain models</a> are also shared in OBJ format with ground-plan textures. 
 </p>
 
 
 <h2>The Open Format Model Archive and Catalog</h2>
 The open format model archive and catalog package has been designed to fulfill the functional requirements of the <p>The ISO reference model for an <a href="https://en.wikipedia.org/wiki/Open_Archival_Information_System">Open Archival Information System (OAIS)</a> for long-term preservation, validation and exchange of assets between applications. 
 </p><p>
-The open format model collection is segmented by tiles.  Each tile-specific model collection may be downloaded in full from the <a href="./index.htm">clickable tile map</a> 
+The open format model collection is segmented by tiles.  Each tile-specific model collection may be downloaded in full from the <a href="https://cityschema.github.io/repository-catalog/catalog/index.htm">clickable tile map</a> 
 or used on-line to locate and download individual model files from each tiles <a href="https://cityschema.github.io/repository-catalog/Bos3d_Tiled_Data/Bos3d_ModelCollection_OBJ/BOS_I_3_ModelCollection_OBJ/ModelCatalog/ModelFinder.htm" target="metadata">Model Catalog Index Map</a>.  
 </p>
 
@@ -144,7 +129,7 @@ The ModelFinder application demonstrates how the tiled model archive and catalog
 <h2 id="skp">SketchUp Format Model Collection</h2>
 <p> The .OBJ format is a simple way of encoding individual models.  But it does not handle layers or nested object hierarchies.  Importing thousands of .OBJ models into a modeling project requires writing a macro.  SketchUp format, while proprietary, is imported by most commercial tools and preserves layering and object hierarchies.  This is why we have chosen to create a set of tiled SketchUp format models for users of commercial 3D modeling tools for a one-click access to the building model collection, tiled terrain and groundplan all in one model.
 </p><p>
-The SketchUp format models preserve the unique Model_ID as the group name for each building model.  These names are also preserved when importing the SketchUp model into 3DMax and Rhino.)  So users developing automated procedures in those tools will be able to use the CSV or GeoJSON catalog to keep their models connected to attribute information.  Sketchup-format models are discussed in more detailon the page <a href="./sketchup_model.htm">Boston 3D Tiled SketchUp Models</a>
+The SketchUp format models preserve the unique Model_ID as the group name for each building model.  These names are also preserved when importing the SketchUp model into 3DMax and Rhino.)  So users developing automated procedures in those tools will be able to use the CSV or GeoJSON catalog to keep their models connected to attribute information.  Sketchup-format models are discussed in more detailon the page <a href="https://cityschema.github.io/repository-catalog/catalog/sketchup_model.htm">Boston 3D Tiled SketchUp Models</a>
 </p>    
 
 <script src="../resources/repocat_includes.js"></script>
