--- a/repocat/index.htm
+++ b/repocat/index.htm
@@ -34,7 +34,7 @@
 
 <!-- Page content goes inside the article div -->
 <div id="article">
-  <h3 class="section_title">Repository Catalog</h3>  <!-- Optional: would be the tile of the intro chapter.  -->
+  <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter.  -->
   <h1 class="title">Introducing the Repository Catalog</h1>
     <p>citySchema.org is a platform for sharing tools and templates for sharing a city-wide 3D model components among diverse tools including geographic information systems (GIS) and 3d modeling programs and tools for archival access and preservation.  The citySchema Repository Catalog is a means of publishing a city model as a single package that includes all of the model components along with the catalog information, feature level metadata and finding aids in a single data-set that may be accessed with a variety of tools. 
     </p>
@@ -42,7 +42,7 @@
     </p>
     <p>The Repository / Catalog is designed make it easy for users to access city model assets.  The catalog repository can be easily be modified as a repository for city models covering other areas.  
     </p>
-   <ul>
+   <ul id="tour">
      <li> Take a tour of <a href="https://cityschema.github.io/repository-catalog/catalog/index.htm" target="downloads">this full working demo created for the Boston Planning and Development agency</a>. 
       <li>Jump to the <a href="https://cityschema.github.io/repository-catalog/catalog/doc_index.htm" target="downloads">Documentation Index</a> which explains a lot of the concepts about how we organize city models.
       <li>Or you can <a href="https://github.com/CitySchema/repository-catalog" target="github">explore the same catalog as a simple file-system, which may be cloned from GitHub</a>. 
