--- a/tile_grid/index.htm
+++ b/tile_grid/index.htm
@@ -34,7 +34,7 @@
 
 <!-- Page content goes inside the article div -->
 <div id="article">
-  <h3 class="section_title">Tile Grid and Coordinate System</h3>  <!-- Optional: would be the tile of the intro chapter.  -->
+  <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter.  -->
   <h1 class="title">Overview of the Tile Grid and Coordinate System</h1>
     <p>This page is currently under construction.  Content should be added by October 7, 2020. 
     </p>
